@@ -46,6 +46,7 @@ public class LargeMethodTest {
         when(MethodExceedingJvmLimit.init()).thenReturn("ok");
         assertEquals("Mocked method should return: ok", "ok", MethodExceedingJvmLimit.init());
         verifyStatic(MethodExceedingJvmLimit.class);
+        MethodExceedingJvmLimit.init();
     }
 
     @Test(expected = IllegalStateException.class)
@@ -54,5 +55,6 @@ public class LargeMethodTest {
         when(MethodExceedingJvmLimit.init()).thenThrow(new IllegalStateException());
         MethodExceedingJvmLimit.init();
         verifyStatic(MethodExceedingJvmLimit.class);
+        MethodExceedingJvmLimit.init();
     }
 }
